--- a/wb-design-system/projects/wb-design-system/src/lib/styles/design_tokens.css
+++ b/wb-design-system/projects/wb-design-system/src/lib/styles/design_tokens.css
@@ -193,41 +193,41 @@
   --colors-gray-800: #252b37;
   --colors-gray-900: #181d27;
   --colors-gray-950: #0a0d12;
-  --spacing-0-0px: 0;
-  --spacing-0-5-2px: 2;
-  --spacing-1-4px: 4;
-  --spacing-2-8px: 8;
-  --spacing-3-12px: 12;
-  --spacing-4-16px: 16;
-  --spacing-5-20px: 20;
-  --spacing-6-24px: 24;
-  --spacing-8-32px: 32;
-  --spacing-10-40px: 40;
-  --spacing-12-48px: 48;
-  --spacing-16-64px: 64;
-  --spacing-20-80px: 80;
-  --spacing-24-96px: 96;
-  --spacing-32-128px: 128;
-  --spacing-40-160px: 160;
-  --spacing-48-192px: 192;
-  --spacing-56-224px: 224;
-  --spacing-64-256px: 256;
-  --spacing-96-384px: 384;
-  --spacing-80-320px: 320;
-  --spacing-120-480px: 480;
-  --spacing-160-640px: 640;
-  --spacing-192-768px: 768;
-  --spacing-256-1-024px: 1024;
-  --spacing-320-1-280px: 1280;
-  --spacing-360-1-440px: 1440;
-  --spacing-400-1-600px: 1600;
-  --spacing-480-1-920px: 1920;
-  --spacing-1-5-6px: 6;
-  --spacing-140-560px: 560;
-  --spacing-180-720px: 720;
-  --spacing-2-5-10px: 10;
-  --spacing-425-1-700px: 1700;
-  --spacing-560-2560px: 2560;
+  --spacing-0-0px: 0px;
+  --spacing-0-5-2px: 2px;
+  --spacing-1-4px: 4px;
+  --spacing-2-8px: 8px;
+  --spacing-3-12px: 12px;
+  --spacing-4-16px: 16px;
+  --spacing-5-20px: 20px;
+  --spacing-6-24px: 24px;
+  --spacing-8-32px: 32px;
+  --spacing-10-40px: 40px;
+  --spacing-12-48px: 48px;
+  --spacing-16-64px: 64px;
+  --spacing-20-80px: 80px;
+  --spacing-24-96px: 96px;
+  --spacing-32-128px: 128px;
+  --spacing-40-160px: 160px;
+  --spacing-48-192px: 192px;
+  --spacing-56-224px: 224px;
+  --spacing-64-256px: 256px;
+  --spacing-96-384px: 384px;
+  --spacing-80-320px: 320px;
+  --spacing-120-480px: 480px;
+  --spacing-160-640px: 640px;
+  --spacing-192-768px: 768px;
+  --spacing-256-1-024px: 1024px;
+  --spacing-320-1-280px: 1280px;
+  --spacing-360-1-440px: 1440px;
+  --spacing-400-1-600px: 1600px;
+  --spacing-480-1-920px: 1920px;
+  --spacing-1-5-6px: 6px;
+  --spacing-140-560px: 560px;
+  --spacing-180-720px: 720px;
+  --spacing-2-5-10px: 10px;
+  --spacing-425-1-700px: 1700px;
+  --spacing-560-2560px: 2560px;
   --spacing-none: var(--spacing-0-0px);
   --spacing-xxs: var(--spacing-0-5-2px);
   --spacing-xs: var(--spacing-1-4px);
@@ -277,14 +277,14 @@
 [data-typography="md"] {
   --font-family-font-family-display: Inter;
   --font-family-font-family-body: Inter;
-  --font-weight-regular: Regular;
-  --font-weight-regular-italic: Regular italic;
-  --font-weight-medium: Medium;
-  --font-weight-medium-italic: Medium italic;
-  --font-weight-semibold: Semibold;
-  --font-weight-semibold-italic: Semibold italic;
-  --font-weight-bold: Bold;
-  --font-weight-bold-italic: Bold italic;
+  --font-weight-regular: 400;
+  --font-weight-regular-italic: 400;
+  --font-weight-medium: 500;
+  --font-weight-medium-italic: 500;
+  --font-weight-semibold: 600;
+  --font-weight-semibold-italic: 600;
+  --font-weight-bold: 700;
+  --font-weight-bold-italic: 700;
   --font-size-text-xs: 10px;
   --font-size-text-sm: 12px;
   --font-size-text-md-base: 13px;
@@ -469,14 +469,14 @@
 [data-typography="lg"] {
   --font-family-font-family-display: Inter;
   --font-family-font-family-body: Inter;
-  --font-weight-regular: Regular;
-  --font-weight-regular-italic: Regular italic;
-  --font-weight-medium: Medium;
-  --font-weight-medium-italic: Medium italic;
-  --font-weight-semibold: Semibold;
-  --font-weight-semibold-italic: Semibold italic;
-  --font-weight-bold: Bold;
-  --font-weight-bold-italic: Bold italic;
+  --font-weight-regular: 400;
+  --font-weight-regular-italic: 400;
+  --font-weight-medium: 500;
+  --font-weight-medium-italic: 500;
+  --font-weight-semibold: 600;
+  --font-weight-semibold-italic: 600;
+  --font-weight-bold: 700;
+  --font-weight-bold-italic: 700;
   --font-size-text-xs: 10px;
   --font-size-text-sm: 12px;
   --font-size-text-md-base: 14px;
