--- a/wb-design-system/projects/wb-design-system/src/lib/components/button/button.component.html
+++ b/wb-design-system/projects/wb-design-system/src/lib/components/button/button.component.html
@@ -1,9 +1,12 @@
 <button pButton [label]="label" [icon]="icon" [iconPos]="iconPos" [disabled]="disabled" [loading]="loading" [ngClass]="{
     'wb-button': true,
     'wb-button--primary': variant === 'primary',
-    'wb-button--secondary': variant === 'secondary',
-    'wb-button--tertiary': variant === 'tertiary',
+    'wb-button--secondary-color': variant === 'secondary-color',
+    'wb-button--secondary-gray': variant === 'secondary-gray',
+    'wb-button--tertiary-color': variant === 'tertiary-color',
+    'wb-button--tertiary-gray': variant === 'tertiary-gray',
     'wb-button--danger': variant === 'danger',
+    'wb-button--xs': size === 'xs',
     'wb-button--sm': size === 'sm',
     'wb-button--md': size === 'md',
     'wb-button--lg': size === 'lg',
